// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin for DirectiveLiterals doesn't bother other Directive Literals 1`] = `
"function foo() {
  'foobar';

  var foo = 'bar';
}"
`;

exports[`babel plugin for DirectiveLiterals doesn't transform functions without 'worklet' directive 1`] = `
"function f(x) {
  return x + 2;
}"
`;

exports[`babel plugin for DirectiveLiterals doesn't transform string literals 1`] = `
"var _worklet_9810417751380_init_data = {
  code: "function foo(x){const bar='worklet';const baz=\\"worklet\\";}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo(x) {
    var bar = 'worklet';
    var baz = "worklet";
  };
  foo.__closure = {};
  foo.__workletHash = 9810417751380;
  foo.__initData = _worklet_9810417751380_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for DirectiveLiterals removes "worklet"; directive from worklets 1`] = `
"var _worklet_4679479961836_init_data = {
  code: "function foo(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo(x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 4679479961836;
  foo.__initData = _worklet_4679479961836_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for DirectiveLiterals removes 'worklet'; directive from worklets 1`] = `
"var _worklet_4679479961836_init_data = {
  code: "function foo(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo(x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 4679479961836;
  foo.__initData = _worklet_4679479961836_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for Layout Animations doesn't workletize callback functions on unknown chained methods before 1`] = `
"FadeIn.AmogusIn().withCallback(function () {
  console.log('FadeIn with AmogusIn before');
});"
`;

exports[`babel plugin for Layout Animations doesn't workletize callback functions on unknown chained methods before with new keyword 1`] = `
"new FadeIn().AmogusIn().withCallback(function () {
  console.log('FadeIn with AmogusIn before');
});"
`;

exports[`babel plugin for Layout Animations doesn't workletize callback functions on unknown objects 1`] = `
"AmogusIn.withCallback(function () {
  console.log('AmogusIn');
});"
`;

exports[`babel plugin for Layout Animations doesn't workletize callback functions on unknown objects chained with known objects 1`] = `
"AmogusIn.FadeIn().withCallback(function () {
  console.log('AmogusIn with FadeIn after');
});"
`;

exports[`babel plugin for Layout Animations doesn't workletize callback functions on unknown objects chained with known objects with new keyword 1`] = `
"new AmogusIn().FadeIn().withCallback(function () {
  console.log('AmogusIn with FadeIn after');
});"
`;

exports[`babel plugin for Layout Animations doesn't workletize callback functions on unknown objects on known chained methods before 1`] = `
"AmogusIn.build().withCallback(function () {
  console.log('AmogusIn with build before');
});"
`;

exports[`babel plugin for Layout Animations doesn't workletize callback functions on unknown objects on known chained methods before with new keyword 1`] = `
"new AmogusIn().build().withCallback(function () {
  console.log('AmogusIn with build before');
});"
`;

exports[`babel plugin for Layout Animations doesn't workletize callback functions on unknown objects with known object chained after 1`] = `
"AmogusIn.withCallback(function () {
  console.log('AmogusIn with FadeIn before');
}).FadeIn();"
`;

exports[`babel plugin for Layout Animations doesn't workletize callback functions on unknown objects with known object chained after with new keyword 1`] = `
"new AmogusIn().withCallback(function () {
  console.log('AmogusIn with FadeIn before');
}).FadeIn();"
`;

exports[`babel plugin for Layout Animations doesn't workletize callback functions on unknown objects with new keyword 1`] = `
"new AmogusIn().withCallback(function () {
  console.log('AmogusIn');
});"
`;

exports[`babel plugin for Layout Animations workletizes callback functions on known chained methods after 1`] = `
"var _worklet_9297685979719_init_data = {
  code: "function anonymous(){console.log('FadeIn with build after');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
FadeIn.withCallback(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('FadeIn with build after');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 9297685979719;
  anonymous.__initData = _worklet_9297685979719_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}()).build();"
`;

exports[`babel plugin for Layout Animations workletizes callback functions on known chained methods after with new keyword 1`] = `
"var _worklet_9297685979719_init_data = {
  code: "function anonymous(){console.log('FadeIn with build after');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
new FadeIn().withCallback(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('FadeIn with build after');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 9297685979719;
  anonymous.__initData = _worklet_9297685979719_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}()).build();"
`;

exports[`babel plugin for Layout Animations workletizes callback functions on known chained methods before 1`] = `
"var _worklet_7455148134810_init_data = {
  code: "function anonymous(){console.log('FadeIn with build before');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
FadeIn.build().withCallback(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('FadeIn with build before');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 7455148134810;
  anonymous.__initData = _worklet_7455148134810_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for Layout Animations workletizes callback functions on known chained methods before with new keyword 1`] = `
"var _worklet_7455148134810_init_data = {
  code: "function anonymous(){console.log('FadeIn with build before');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
new FadeIn().build().withCallback(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('FadeIn with build before');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 7455148134810;
  anonymous.__initData = _worklet_7455148134810_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for Layout Animations workletizes callback functions on longer chains of known objects 1`] = `
"var _worklet_1134777276323_init_data = {
  code: "function anonymous(){console.log('FadeIn with build');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
FadeIn.build().duration().withCallback(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('FadeIn with build');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 1134777276323;
  anonymous.__initData = _worklet_1134777276323_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for Layout Animations workletizes callback functions on longer chains of known objects with new keyword 1`] = `
"var _worklet_1134777276323_init_data = {
  code: "function anonymous(){console.log('FadeIn with build');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
new FadeIn().build().duration().withCallback(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('FadeIn with build');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 1134777276323;
  anonymous.__initData = _worklet_1134777276323_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for Layout Animations workletizes callback functions on unknown objects chained after 1`] = `
"var _worklet_5878665076948_init_data = {
  code: "function anonymous(){console.log('FadeIn with AmogusIn after');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
FadeIn.withCallback(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('FadeIn with AmogusIn after');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 5878665076948;
  anonymous.__initData = _worklet_5878665076948_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}()).AmogusIn();"
`;

exports[`babel plugin for Layout Animations workletizes callback functions on unknown objects chained after with new keyword 1`] = `
"var _worklet_5878665076948_init_data = {
  code: "function anonymous(){console.log('FadeIn with AmogusIn after');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
new FadeIn().withCallback(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('FadeIn with AmogusIn after');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 5878665076948;
  anonymous.__initData = _worklet_5878665076948_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}()).AmogusIn();"
`;

exports[`babel plugin for Layout Animations workletizes unchained callback functions automatically 1`] = `
"var _worklet_7606417127287_init_data = {
  code: "function anonymous(){console.log('FadeIn');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
FadeIn.withCallback(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('FadeIn');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 7606417127287;
  anonymous.__initData = _worklet_7606417127287_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for Layout Animations workletizes unchained callback functions automatically with new keyword 1`] = `
"var _worklet_7606417127287_init_data = {
  code: "function anonymous(){console.log('FadeIn');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
new FadeIn().withCallback(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('FadeIn');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 7606417127287;
  anonymous.__initData = _worklet_7606417127287_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for Web configuration includes initData when isWeb option is set to true and is overridden with REANIMATED_BABEL_PLUGIN_IS_WEB 1`] = `
"var _worklet_17472070642672_init_data = {
  code: "function foo(){var foo='bar';}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo() {
    var foo = 'bar';
  };
  foo.__closure = {};
  foo.__workletHash = 17472070642672;
  foo.__initData = _worklet_17472070642672_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for Web configuration skips initData when REANIMATED_BABEL_PLUGIN_IS_WEB is set 1`] = `
"var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo() {
    var foo = 'bar';
  };
  foo.__closure = {};
  foo.__workletHash = 17472070642672;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for Web configuration skips initData when isWeb option is set 1`] = `
"var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo() {
    var foo = 'bar';
  };
  foo.__closure = {};
  foo.__workletHash = 17472070642672;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for Web configuration skips initData when isWeb option is set to false and is overridden with REANIMATED_BABEL_PLUGIN_IS_WEB 1`] = `
"var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo() {
    var foo = 'bar';
  };
  foo.__closure = {};
  foo.__workletHash = 17472070642672;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for class worklets workletizes class field 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _defineProperty2 = _interopRequireDefault(require("@babel/runtime/helpers/defineProperty"));
var _worklet_16347365292089_init_data = {
  code: "function anonymous(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var Foo = (0, _createClass2.default)(function Foo() {
  (0, _classCallCheck2.default)(this, Foo);
  (0, _defineProperty2.default)(this, "bar", function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous(x) {
      return x + 2;
    };
    anonymous.__closure = {};
    anonymous.__workletHash = 16347365292089;
    anonymous.__initData = _worklet_16347365292089_init_data;
    anonymous.__stackDetails = _e;
    return anonymous;
  }());
});"
`;

exports[`babel plugin for class worklets workletizes constructor 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _worklet_11052941891417_init_data = {
  code: "function Foo(x){const Foo=this._recur;const{_classCallCheck}=this.__closure;_classCallCheck(this,Foo);this.x=x;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var Foo = (0, _createClass2.default)(function () {
  var _e = [new global.Error(), -2, -27];
  var Foo = function Foo(x) {
    (0, _classCallCheck2.default)(this, Foo);
    this.x = x;
  };
  Foo.__closure = {
    _classCallCheck: _classCallCheck2.default
  };
  Foo.__workletHash = 11052941891417;
  Foo.__initData = _worklet_11052941891417_init_data;
  Foo.__stackDetails = _e;
  return Foo;
}());"
`;

exports[`babel plugin for class worklets workletizes getter 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var _worklet_13932542455552_init_data = {
  code: "function get(){const{x}=this.__closure;return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var Foo = function () {
  function Foo() {
    (0, _classCallCheck2.default)(this, Foo);
  }
  (0, _createClass2.default)(Foo, [{
    key: "bar",
    get: function () {
      var _e = [new global.Error(), -2, -27];
      var get = function get() {
        return x + 2;
      };
      get.__closure = {
        x: x
      };
      get.__workletHash = 13932542455552;
      get.__initData = _worklet_13932542455552_init_data;
      get.__stackDetails = _e;
      return get;
    }()
  }]);
  return Foo;
}();"
`;

exports[`babel plugin for class worklets workletizes instance method 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var _worklet_16974800582491_init_data = {
  code: "function bar(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var Foo = function () {
  function Foo() {
    (0, _classCallCheck2.default)(this, Foo);
  }
  (0, _createClass2.default)(Foo, [{
    key: "bar",
    value: function () {
      var _e = [new global.Error(), 1, -27];
      var bar = function bar(x) {
        return x + 2;
      };
      bar.__closure = {};
      bar.__workletHash = 16974800582491;
      bar.__initData = _worklet_16974800582491_init_data;
      bar.__stackDetails = _e;
      return bar;
    }()
  }]);
  return Foo;
}();"
`;

exports[`babel plugin for class worklets workletizes setter 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var _worklet_6451428689423_init_data = {
  code: "function set(x){this.x=x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var Foo = function () {
  function Foo() {
    (0, _classCallCheck2.default)(this, Foo);
  }
  (0, _createClass2.default)(Foo, [{
    key: "bar",
    set: function () {
      var _e = [new global.Error(), 1, -27];
      var set = function set(x) {
        this.x = x + 2;
      };
      set.__closure = {};
      set.__workletHash = 6451428689423;
      set.__initData = _worklet_6451428689423_init_data;
      set.__stackDetails = _e;
      return set;
    }()
  }]);
  return Foo;
}();"
`;

exports[`babel plugin for class worklets workletizes static class field 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _defineProperty2 = _interopRequireDefault(require("@babel/runtime/helpers/defineProperty"));
var Foo = (0, _createClass2.default)(function Foo() {
  (0, _classCallCheck2.default)(this, Foo);
});
var _worklet_16347365292089_init_data = {
  code: "function anonymous(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
(0, _defineProperty2.default)(Foo, "bar", function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous(x) {
    return x + 2;
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 16347365292089;
  anonymous.__initData = _worklet_16347365292089_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for class worklets workletizes static method 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var _worklet_16974800582491_init_data = {
  code: "function bar(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var Foo = function () {
  function Foo() {
    (0, _classCallCheck2.default)(this, Foo);
  }
  (0, _createClass2.default)(Foo, null, [{
    key: "bar",
    value: function () {
      var _e = [new global.Error(), 1, -27];
      var bar = function bar(x) {
        return x + 2;
      };
      bar.__closure = {};
      bar.__workletHash = 16974800582491;
      bar.__initData = _worklet_16974800582491_init_data;
      bar.__stackDetails = _e;
      return bar;
    }()
  }]);
  return Foo;
}();"
`;

exports[`babel plugin for closure capturing captures worklets environment 1`] = `
"var x = 5;
var objX = {
  x: x
};
var _worklet_3447562087488_init_data = {
  code: "function f(){const{x,objX}=this.__closure;return{res:x+objX.x};}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var f = function () {
  var _e = [new global.Error(), -3, -27];
  var f = function f() {
    return {
      res: x + objX.x
    };
  };
  f.__closure = {
    x: x,
    objX: objX
  };
  f.__workletHash = 3447562087488;
  f.__initData = _worklet_3447562087488_init_data;
  f.__stackDetails = _e;
  return f;
}();"
`;

exports[`babel plugin for closure capturing doesn't capture arguments 1`] = `
"var _worklet_17093819837059_init_data = {
  code: "function f(a,b,c){console.log(arguments);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var f = function () {
  var _e = [new global.Error(), 1, -27];
  var f = function f(a, b, c) {
    console.log(arguments);
  };
  f.__closure = {};
  f.__workletHash = 17093819837059;
  f.__initData = _worklet_17093819837059_init_data;
  f.__stackDetails = _e;
  return f;
}();"
`;

exports[`babel plugin for closure capturing doesn't capture custom globals 1`] = `
"var foo = 42;
var _worklet_7141086932261_init_data = {
  code: "function f(){console.log(foo);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var f = function () {
  var _e = [new global.Error(), 1, -27];
  var f = function f() {
    console.log(foo);
  };
  f.__closure = {};
  f.__workletHash = 7141086932261;
  f.__initData = _worklet_7141086932261_init_data;
  f.__stackDetails = _e;
  return f;
}();"
`;

exports[`babel plugin for closure capturing doesn't capture default globals 1`] = `
"var _worklet_13298016111221_init_data = {
  code: "function f(){console.log('test');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var f = function () {
  var _e = [new global.Error(), 1, -27];
  var f = function f() {
    console.log('test');
  };
  f.__closure = {};
  f.__workletHash = 13298016111221;
  f.__initData = _worklet_13298016111221_init_data;
  f.__stackDetails = _e;
  return f;
}();"
`;

exports[`babel plugin for closure capturing doesn't capture objects' properties 1`] = `
"var foo = {
  bar: 42
};
var _worklet_3750134465664_init_data = {
  code: "function f(){const{foo}=this.__closure;console.log(foo.bar);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var f = function () {
  var _e = [new global.Error(), -2, -27];
  var f = function f() {
    console.log(foo.bar);
  };
  f.__closure = {
    foo: foo
  };
  f.__workletHash = 3750134465664;
  f.__initData = _worklet_3750134465664_init_data;
  f.__stackDetails = _e;
  return f;
}();"
`;

exports[`babel plugin for debugging does inject location for worklets in dev builds 1`] = `
"var _worklet_1852213185147_init_data = {
  code: "function anonymous(){const x=1;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = useAnimatedStyle(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    var x = 1;
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 1852213185147;
  anonymous.__initData = _worklet_1852213185147_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for debugging doesn't inject location for worklets in production builds 1`] = `
"var _worklet_1852213185147_init_data = {
  code: "function anonymous(){const x=1;}"
};
var foo = useAnimatedStyle(function () {
  var anonymous = function anonymous() {
    var x = 1;
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 1852213185147;
  anonymous.__initData = _worklet_1852213185147_init_data;
  return anonymous;
}());"
`;

exports[`babel plugin for debugging doesn't inject version for worklets in production builds 1`] = `
"var _worklet_1852213185147_init_data = {
  code: "function anonymous(){const x=1;}"
};
var foo = useAnimatedStyle(function () {
  var anonymous = function anonymous() {
    var x = 1;
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 1852213185147;
  anonymous.__initData = _worklet_1852213185147_init_data;
  return anonymous;
}());"
`;

exports[`babel plugin for explicit worklets workletizes ArrowFunctionExpression 1`] = `
"var _worklet_16347365292089_init_data = {
  code: "function anonymous(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous(x) {
    return x + 2;
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 16347365292089;
  anonymous.__initData = _worklet_16347365292089_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}();"
`;

exports[`babel plugin for explicit worklets workletizes FunctionDeclaration 1`] = `
"var _worklet_4679479961836_init_data = {
  code: "function foo(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo(x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 4679479961836;
  foo.__initData = _worklet_4679479961836_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for explicit worklets workletizes named FunctionExpression 1`] = `
"var _worklet_4679479961836_init_data = {
  code: "function foo(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo(x) {
    return x + 2;
  };
  foo.__closure = {};
  foo.__workletHash = 4679479961836;
  foo.__initData = _worklet_4679479961836_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for explicit worklets workletizes unnamed FunctionExpression 1`] = `
"var _worklet_16347365292089_init_data = {
  code: "function anonymous(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous(x) {
    return x + 2;
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 16347365292089;
  anonymous.__initData = _worklet_16347365292089_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}();"
`;

exports[`babel plugin for function hooks workletizes hook wrapped ArrowFunctionExpression automatically 1`] = `
"var _worklet_9645206935615_init_data = {
  code: "function anonymous(){return{width:50};}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var animatedStyle = useAnimatedStyle(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    return {
      width: 50
    };
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 9645206935615;
  anonymous.__initData = _worklet_9645206935615_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for function hooks workletizes hook wrapped named FunctionExpression automatically 1`] = `
"var _worklet_6275510763626_init_data = {
  code: "function foo(){return{width:50};}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var animatedStyle = useAnimatedStyle(function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo() {
    return {
      width: 50
    };
  };
  foo.__closure = {};
  foo.__workletHash = 6275510763626;
  foo.__initData = _worklet_6275510763626_init_data;
  foo.__stackDetails = _e;
  return foo;
}());"
`;

exports[`babel plugin for function hooks workletizes hook wrapped unnamed FunctionExpression automatically 1`] = `
"var _worklet_9645206935615_init_data = {
  code: "function anonymous(){return{width:50};}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var animatedStyle = useAnimatedStyle(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    return {
      width: 50
    };
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 9645206935615;
  anonymous.__initData = _worklet_9645206935615_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for inline styles doesn't show a warning if user writes something like style={styles.value} 1`] = `
"function App() {
  return React.createElement(Animated.View, {
    style: styles.value
  });
}"
`;

exports[`babel plugin for inline styles shows a warning if user uses .value inside inline style 1`] = `
"function App() {
  return React.createElement(Animated.View, {
    style: {
      width: function () {
        console.warn(require("react-native-reanimated").getUseOfValueInStyleWarning());
        return sharedValue.value;
      }()
    }
  });
}"
`;

exports[`babel plugin for inline styles shows a warning if user uses .value inside inline style, style array 1`] = `
"function App() {
  return React.createElement(Animated.View, {
    style: [style, {
      width: function () {
        console.warn(require("react-native-reanimated").getUseOfValueInStyleWarning());
        return sharedValue.value;
      }()
    }]
  });
}"
`;

exports[`babel plugin for inline styles shows a warning if user uses .value inside inline style, transforms 1`] = `
"function App() {
  return React.createElement(Animated.View, {
    style: {
      transform: [{
        translateX: function () {
          console.warn(require("react-native-reanimated").getUseOfValueInStyleWarning());
          return sharedValue.value;
        }()
      }]
    }
  });
}"
`;

exports[`babel plugin for object hooks doesn't transform ArrowFunctionExpression as argument of useAnimatedGestureHandler 1`] = `"useAnimatedGestureHandler(function () {});"`;

exports[`babel plugin for object hooks doesn't transform named FunctionExpression as argument of useAnimatedGestureHandler 1`] = `"useAnimatedGestureHandler(function foo() {});"`;

exports[`babel plugin for object hooks doesn't transform unnamed FunctionExpression as argument of useAnimatedGestureHandler 1`] = `"useAnimatedGestureHandler(function () {});"`;

exports[`babel plugin for object hooks supports empty object in useAnimatedGestureHandler 1`] = `"useAnimatedGestureHandler({});"`;

exports[`babel plugin for object hooks supports empty object in useAnimatedScrollHandler 1`] = `"useAnimatedScrollHandler({});"`;

exports[`babel plugin for object hooks transforms ArrowFunctionExpression as argument of useAnimatedScrollHandler 1`] = `
"var _worklet_1022605193782_init_data = {
  code: "function anonymous(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedScrollHandler(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous(event) {
    console.log(event);
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 1022605193782;
  anonymous.__initData = _worklet_1022605193782_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for object hooks transforms each object property in useAnimatedGestureHandler 1`] = `
"var _worklet_14892326408241_init_data = {
  code: "function anonymous(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_14892326408241_init_data2 = {
  code: "function anonymous(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_14892326408241_init_data3 = {
  code: "function anonymous(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedGestureHandler({
  onStart: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous() {};
    anonymous.__closure = {};
    anonymous.__workletHash = 14892326408241;
    anonymous.__initData = _worklet_14892326408241_init_data;
    anonymous.__stackDetails = _e;
    return anonymous;
  }(),
  onUpdate: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous() {};
    anonymous.__closure = {};
    anonymous.__workletHash = 14892326408241;
    anonymous.__initData = _worklet_14892326408241_init_data2;
    anonymous.__stackDetails = _e;
    return anonymous;
  }(),
  onEnd: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous() {};
    anonymous.__closure = {};
    anonymous.__workletHash = 14892326408241;
    anonymous.__initData = _worklet_14892326408241_init_data3;
    anonymous.__stackDetails = _e;
    return anonymous;
  }()
});"
`;

exports[`babel plugin for object hooks transforms each object property in useAnimatedScrollHandler 1`] = `
"var _worklet_14892326408241_init_data = {
  code: "function anonymous(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_14892326408241_init_data2 = {
  code: "function anonymous(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_14892326408241_init_data3 = {
  code: "function anonymous(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_14892326408241_init_data4 = {
  code: "function anonymous(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_14892326408241_init_data5 = {
  code: "function anonymous(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedScrollHandler({
  onScroll: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous() {};
    anonymous.__closure = {};
    anonymous.__workletHash = 14892326408241;
    anonymous.__initData = _worklet_14892326408241_init_data;
    anonymous.__stackDetails = _e;
    return anonymous;
  }(),
  onBeginDrag: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous() {};
    anonymous.__closure = {};
    anonymous.__workletHash = 14892326408241;
    anonymous.__initData = _worklet_14892326408241_init_data2;
    anonymous.__stackDetails = _e;
    return anonymous;
  }(),
  onEndDrag: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous() {};
    anonymous.__closure = {};
    anonymous.__workletHash = 14892326408241;
    anonymous.__initData = _worklet_14892326408241_init_data3;
    anonymous.__stackDetails = _e;
    return anonymous;
  }(),
  onMomentumBegin: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous() {};
    anonymous.__closure = {};
    anonymous.__workletHash = 14892326408241;
    anonymous.__initData = _worklet_14892326408241_init_data4;
    anonymous.__stackDetails = _e;
    return anonymous;
  }(),
  onMomentumEnd: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous() {};
    anonymous.__closure = {};
    anonymous.__workletHash = 14892326408241;
    anonymous.__initData = _worklet_14892326408241_init_data5;
    anonymous.__stackDetails = _e;
    return anonymous;
  }()
});"
`;

exports[`babel plugin for object hooks transforms named FunctionExpression as argument of useAnimatedScrollHandler 1`] = `
"var _worklet_14540236792163_init_data = {
  code: "function foo(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedScrollHandler(function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo(event) {
    console.log(event);
  };
  foo.__closure = {};
  foo.__workletHash = 14540236792163;
  foo.__initData = _worklet_14540236792163_init_data;
  foo.__stackDetails = _e;
  return foo;
}());"
`;

exports[`babel plugin for object hooks transforms unnamed FunctionExpression as argument of useAnimatedScrollHandler 1`] = `
"var _worklet_1022605193782_init_data = {
  code: "function anonymous(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedScrollHandler(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous(event) {
    console.log(event);
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 1022605193782;
  anonymous.__initData = _worklet_1022605193782_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for object hooks workletizes useAnimatedGestureHandler wrapped ArrowFunctionExpression automatically 1`] = `
"var _worklet_1022605193782_init_data = {
  code: "function anonymous(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedGestureHandler({
  onStart: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous(event) {
      console.log(event);
    };
    anonymous.__closure = {};
    anonymous.__workletHash = 1022605193782;
    anonymous.__initData = _worklet_1022605193782_init_data;
    anonymous.__stackDetails = _e;
    return anonymous;
  }()
});"
`;

exports[`babel plugin for object hooks workletizes useAnimatedGestureHandler wrapped ObjectMethod automatically 1`] = `
"var _worklet_338158776260_init_data = {
  code: "function onStart(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedGestureHandler({
  onStart: function () {
    var _e = [new global.Error(), 1, -27];
    var onStart = function onStart(event) {
      console.log(event);
    };
    onStart.__closure = {};
    onStart.__workletHash = 338158776260;
    onStart.__initData = _worklet_338158776260_init_data;
    onStart.__stackDetails = _e;
    return onStart;
  }()
});"
`;

exports[`babel plugin for object hooks workletizes useAnimatedGestureHandler wrapped named FunctionExpression automatically 1`] = `
"var _worklet_338158776260_init_data = {
  code: "function onStart(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedGestureHandler({
  onStart: function () {
    var _e = [new global.Error(), 1, -27];
    var onStart = function onStart(event) {
      console.log(event);
    };
    onStart.__closure = {};
    onStart.__workletHash = 338158776260;
    onStart.__initData = _worklet_338158776260_init_data;
    onStart.__stackDetails = _e;
    return onStart;
  }()
});"
`;

exports[`babel plugin for object hooks workletizes useAnimatedGestureHandler wrapped unnamed FunctionExpression automatically 1`] = `
"var _worklet_1022605193782_init_data = {
  code: "function anonymous(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedGestureHandler({
  onStart: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous(event) {
      console.log(event);
    };
    anonymous.__closure = {};
    anonymous.__workletHash = 1022605193782;
    anonymous.__initData = _worklet_1022605193782_init_data;
    anonymous.__stackDetails = _e;
    return anonymous;
  }()
});"
`;

exports[`babel plugin for object hooks workletizes useAnimatedScrollHandler wrapped ArrowFunctionExpression automatically 1`] = `
"var _worklet_1022605193782_init_data = {
  code: "function anonymous(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedScrollHandler({
  onScroll: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous(event) {
      console.log(event);
    };
    anonymous.__closure = {};
    anonymous.__workletHash = 1022605193782;
    anonymous.__initData = _worklet_1022605193782_init_data;
    anonymous.__stackDetails = _e;
    return anonymous;
  }()
});"
`;

exports[`babel plugin for object hooks workletizes useAnimatedScrollHandler wrapped ObjectMethod automatically 1`] = `
"var _worklet_947458829673_init_data = {
  code: "function onScroll(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedGestureHandler({
  onScroll: function () {
    var _e = [new global.Error(), 1, -27];
    var onScroll = function onScroll(event) {
      console.log(event);
    };
    onScroll.__closure = {};
    onScroll.__workletHash = 947458829673;
    onScroll.__initData = _worklet_947458829673_init_data;
    onScroll.__stackDetails = _e;
    return onScroll;
  }()
});"
`;

exports[`babel plugin for object hooks workletizes useAnimatedScrollHandler wrapped named FunctionExpression automatically 1`] = `
"var _worklet_947458829673_init_data = {
  code: "function onScroll(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedScrollHandler({
  onScroll: function () {
    var _e = [new global.Error(), 1, -27];
    var onScroll = function onScroll(event) {
      console.log(event);
    };
    onScroll.__closure = {};
    onScroll.__workletHash = 947458829673;
    onScroll.__initData = _worklet_947458829673_init_data;
    onScroll.__stackDetails = _e;
    return onScroll;
  }()
});"
`;

exports[`babel plugin for object hooks workletizes useAnimatedScrollHandler wrapped unnamed FunctionExpression automatically 1`] = `
"var _worklet_1022605193782_init_data = {
  code: "function anonymous(event){console.log(event);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
useAnimatedScrollHandler({
  onScroll: function () {
    var _e = [new global.Error(), 1, -27];
    var anonymous = function anonymous(event) {
      console.log(event);
    };
    anonymous.__closure = {};
    anonymous.__workletHash = 1022605193782;
    anonymous.__initData = _worklet_1022605193782_init_data;
    anonymous.__stackDetails = _e;
    return anonymous;
  }()
});"
`;

exports[`babel plugin for react-native-gesture-handler doesn't transform chained methods of objects containing Gesture property 1`] = `
"var foo = Something.Gesture.Tap().onEnd(function () {
  console.log('onEnd');
});"
`;

exports[`babel plugin for react-native-gesture-handler doesn't transform standard callback functions 1`] = `
"var foo = Something.Tap().onEnd(function (_event, _success) {
  console.log('onEnd');
});"
`;

exports[`babel plugin for react-native-gesture-handler doesn't workletize irrelevant chained gesture object callback functions 1`] = `"var foo = Gesture.Tap().toString();"`;

exports[`babel plugin for react-native-gesture-handler transforms spread operator in Animated component 1`] = `
"function App() {
  return React.createElement(Animated.View, {
    style: [style, Object.assign({}, styles.container, {
      width: function () {
        console.warn(require("react-native-reanimated").getUseOfValueInStyleWarning());
        return sharedValue.value;
      }()
    })]
  });
}"
`;

exports[`babel plugin for react-native-gesture-handler transforms spread operator in worklets for arrays 1`] = `
"var _worklet_3161057533258_init_data = {
  code: "function foo(){const bar=[4,5];const baz=[1,...[2,3],...bar];}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo() {
    var bar = [4, 5];
    var baz = [1].concat([2, 3], bar);
  };
  foo.__closure = {};
  foo.__workletHash = 3161057533258;
  foo.__initData = _worklet_3161057533258_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for react-native-gesture-handler transforms spread operator in worklets for function arguments 1`] = `
"var _worklet_9866931756941_init_data = {
  code: "function foo(...args){console.log(args);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo() {
    for (var _len = arguments.length, args = new Array(_len), _key = 0; _key < _len; _key++) {
      args[_key] = arguments[_key];
    }
    console.log(args);
  };
  foo.__closure = {};
  foo.__workletHash = 9866931756941;
  foo.__initData = _worklet_9866931756941_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for react-native-gesture-handler transforms spread operator in worklets for function calls 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _toConsumableArray2 = _interopRequireDefault(require("@babel/runtime/helpers/toConsumableArray"));
var _worklet_2015887751437_init_data = {
  code: "function foo(arg){console.log(...arg);}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo(arg) {
    var _console;
    (_console = console).log.apply(_console, (0, _toConsumableArray2.default)(arg));
  };
  foo.__closure = {};
  foo.__workletHash = 2015887751437;
  foo.__initData = _worklet_2015887751437_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for react-native-gesture-handler transforms spread operator in worklets for objects 1`] = `
"var _worklet_792186851025_init_data = {
  code: "function foo(){const bar={d:4,e:5};const baz={a:1,...{b:2,c:3},...bar};}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo() {
    var bar = {
      d: 4,
      e: 5
    };
    var baz = Object.assign({
      a: 1
    }, {
      b: 2,
      c: 3
    }, bar);
  };
  foo.__closure = {};
  foo.__workletHash = 792186851025;
  foo.__initData = _worklet_792186851025_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for react-native-gesture-handler workletizes possibly chained gesture object callback functions automatically 1`] = `
"var _worklet_15393478329680_init_data = {
  code: "function anonymous(){console.log('onBegin');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_12748187344900_init_data = {
  code: "function anonymous(_event){console.log('onStart');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_232586479291_init_data = {
  code: "function anonymous(_event,_success){console.log('onEnd');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = Gesture.Tap().numberOfTaps(2).onBegin(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('onBegin');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 15393478329680;
  anonymous.__initData = _worklet_15393478329680_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}()).onStart(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous(_event) {
    console.log('onStart');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 12748187344900;
  anonymous.__initData = _worklet_12748187344900_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}()).onEnd(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous(_event, _success) {
    console.log('onEnd');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 232586479291;
  anonymous.__initData = _worklet_232586479291_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}());"
`;

exports[`babel plugin for runOnUI workletizes ArrowFunctionExpression inside runOnUI automatically 1`] = `
"var _worklet_15854903236968_init_data = {
  code: "function anonymous(){console.log('Hello from the UI thread!');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
runOnUI(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('Hello from the UI thread!');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 15854903236968;
  anonymous.__initData = _worklet_15854903236968_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}())();"
`;

exports[`babel plugin for runOnUI workletizes named FunctionExpression inside runOnUI automatically 1`] = `
"var _worklet_5662051517689_init_data = {
  code: "function hello(){console.log('Hello from the UI thread!');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
runOnUI(function () {
  var _e = [new global.Error(), 1, -27];
  var hello = function hello() {
    console.log('Hello from the UI thread!');
  };
  hello.__closure = {};
  hello.__workletHash = 5662051517689;
  hello.__initData = _worklet_5662051517689_init_data;
  hello.__stackDetails = _e;
  return hello;
}())();"
`;

exports[`babel plugin for runOnUI workletizes unnamed FunctionExpression inside runOnUI automatically 1`] = `
"var _worklet_15854903236968_init_data = {
  code: "function anonymous(){console.log('Hello from the UI thread!');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
runOnUI(function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    console.log('Hello from the UI thread!');
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 15854903236968;
  anonymous.__initData = _worklet_15854903236968_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}())();"
`;

exports[`babel plugin for sequence expressions supports SequenceExpression 1`] = `
"function App() {
  (0, fun)({
    onStart: function onStart() {}
  }, []);
}"
`;

exports[`babel plugin for sequence expressions supports SequenceExpression, many arguments 1`] = `
"var _worklet_4434179069699_init_data = {
  code: "function onStart(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
function App() {
  (0, 3, fun)({
    onStart: function () {
      var _e = [new global.Error(), 1, -27];
      var onStart = function onStart() {};
      onStart.__closure = {};
      onStart.__workletHash = 4434179069699;
      onStart.__initData = _worklet_4434179069699_init_data;
      onStart.__stackDetails = _e;
      return onStart;
    }()
  }, []);
}"
`;

exports[`babel plugin for sequence expressions supports SequenceExpression, with objectHook 1`] = `
"var _worklet_4434179069699_init_data = {
  code: "function onStart(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
function App() {
  (0, useAnimatedGestureHandler)({
    onStart: function () {
      var _e = [new global.Error(), 1, -27];
      var onStart = function onStart() {};
      onStart.__closure = {};
      onStart.__workletHash = 4434179069699;
      onStart.__initData = _worklet_4434179069699_init_data;
      onStart.__stackDetails = _e;
      return onStart;
    }()
  }, []);
}"
`;

exports[`babel plugin for sequence expressions supports SequenceExpression, with worklet 1`] = `
"var _worklet_4434179069699_init_data = {
  code: "function onStart(){}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
function App() {
  (0, fun)({
    onStart: function () {
      var _e = [new global.Error(), 1, -27];
      var onStart = function onStart() {};
      onStart.__closure = {};
      onStart.__workletHash = 4434179069699;
      onStart.__initData = _worklet_4434179069699_init_data;
      onStart.__stackDetails = _e;
      return onStart;
    }()
  }, []);
}"
`;

exports[`babel plugin for sequence expressions supports SequenceExpression, with worklet closure 1`] = `
"var _worklet_5519800181618_init_data = {
  code: "function onStart(){const{obj}=this.__closure;const a=obj.a;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
function App() {
  var obj = {
    a: 1,
    b: 2
  };
  (0, fun)({
    onStart: function () {
      var _e = [new global.Error(), -2, -27];
      var onStart = function onStart() {
        var a = obj.a;
      };
      onStart.__closure = {
        obj: obj
      };
      onStart.__workletHash = 5519800181618;
      onStart.__initData = _worklet_5519800181618_init_data;
      onStart.__stackDetails = _e;
      return onStart;
    }()
  }, []);
}"
`;

exports[`babel plugin for worklet nesting doesn't process nested worklets when disabled 1`] = `
"var _worklet_1678749606628_init_data = {
  code: "function foo(x){function bar(x){'worklet';return x+2;}return bar(x)+1;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_16974800582491_init_data = {
  code: "function bar(x){return x+2;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), 1, -27];
  var foo = function foo(x) {
    var bar = function () {
      var _e = [new global.Error(), 1, -27];
      var bar = function bar(x) {
        return x + 2;
      };
      bar.__closure = {};
      bar.__workletHash = 16974800582491;
      bar.__initData = _worklet_16974800582491_init_data;
      bar.__stackDetails = _e;
      return bar;
    }();
    return bar(x) + 1;
  };
  foo.__closure = {};
  foo.__workletHash = 1678749606628;
  foo.__initData = _worklet_1678749606628_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin for worklet nesting transpiles nested worklets embedded in runOnJS in runOnUI 1`] = `
"var _worklet_16739363980177_init_data = {
  code: "function anonymous(){const{runOnJS}=this.__closure;console.log('Hello from UI thread');runOnJS(function(){'worklet';console.log('Hello from JS thread');})();}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_13427774179957_init_data = {
  code: "function anonymous(){console.log('Hello from JS thread');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
runOnUI(function () {
  var _e = [new global.Error(), -2, -27];
  var anonymous = function anonymous() {
    console.log('Hello from UI thread');
    runOnJS(function () {
      var _e = [new global.Error(), 1, -27];
      var anonymous = function anonymous() {
        console.log('Hello from JS thread');
      };
      anonymous.__closure = {};
      anonymous.__workletHash = 13427774179957;
      anonymous.__initData = _worklet_13427774179957_init_data;
      anonymous.__stackDetails = _e;
      return anonymous;
    }())();
  };
  anonymous.__closure = {
    runOnJS: runOnJS
  };
  anonymous.__workletHash = 16739363980177;
  anonymous.__initData = _worklet_16739363980177_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}())();"
`;

exports[`babel plugin for worklet nesting transpiles nested worklets embedded in runOnUI in runOnJS in runOnUI 1`] = `
"var _worklet_15024386663586_init_data = {
  code: "function anonymous(){const{runOnJS,runOnUI}=this.__closure;console.log('Hello from UI thread');runOnJS(function(){'worklet';console.log('Hello from JS thread');runOnUI(function(){console.log('Hello from UI thread again');})();})();}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_15780567630262_init_data = {
  code: "function anonymous(){const{runOnUI}=this.__closure;console.log('Hello from JS thread');runOnUI(function(){console.log('Hello from UI thread again');})();}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_12364489264272_init_data = {
  code: "function anonymous(){console.log('Hello from UI thread again');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
runOnUI(function () {
  var _e = [new global.Error(), -3, -27];
  var anonymous = function anonymous() {
    console.log('Hello from UI thread');
    runOnJS(function () {
      var _e = [new global.Error(), -2, -27];
      var anonymous = function anonymous() {
        console.log('Hello from JS thread');
        runOnUI(function () {
          var _e = [new global.Error(), 1, -27];
          var anonymous = function anonymous() {
            console.log('Hello from UI thread again');
          };
          anonymous.__closure = {};
          anonymous.__workletHash = 12364489264272;
          anonymous.__initData = _worklet_12364489264272_init_data;
          anonymous.__stackDetails = _e;
          return anonymous;
        }())();
      };
      anonymous.__closure = {
        runOnUI: runOnUI
      };
      anonymous.__workletHash = 15780567630262;
      anonymous.__initData = _worklet_15780567630262_init_data;
      anonymous.__stackDetails = _e;
      return anonymous;
    }())();
  };
  anonymous.__closure = {
    runOnJS: runOnJS,
    runOnUI: runOnUI
  };
  anonymous.__workletHash = 15024386663586;
  anonymous.__initData = _worklet_15024386663586_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}())();"
`;

exports[`babel plugin for worklet nesting transpiles nested worklets when enabled 1`] = `
"var _worklet_14052814262791_init_data = {
  code: "function anonymous(){console.log('bar');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_6747298666324_init_data = {
  code: "function anonymous(){const{_worklet_14052814262791_init_data}=this.__closure;const bar=function(){const _e=[new global.Error(),1,-27];const anonymous=function(){console.log('bar');};anonymous.__closure={};anonymous.__workletHash=14052814262791;anonymous.__initData=_worklet_14052814262791_init_data;anonymous.__stackDetails=_e;return anonymous;}();bar();}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), -2, -27];
  var anonymous = function anonymous() {
    var bar = function () {
      var _e = [new global.Error(), 1, -27];
      var anonymous = function anonymous() {
        console.log('bar');
      };
      anonymous.__closure = {};
      anonymous.__workletHash = 14052814262791;
      anonymous.__initData = _worklet_14052814262791_init_data;
      anonymous.__stackDetails = _e;
      return anonymous;
    }();
    bar();
  };
  anonymous.__closure = {
    _worklet_14052814262791_init_data: _worklet_14052814262791_init_data
  };
  anonymous.__workletHash = 6747298666324;
  anonymous.__initData = _worklet_6747298666324_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}();"
`;

exports[`babel plugin for worklet nesting transpiles nested worklets when enabled with depth 3 1`] = `
"var _worklet_744555119489_init_data = {
  code: "function anonymous(){console.log('foobar');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_2165106463703_init_data = {
  code: "function anonymous(){const{_worklet_744555119489_init_data}=this.__closure;const foobar=function(){const _e=[new global.Error(),1,-27];const anonymous=function(){console.log('foobar');};anonymous.__closure={};anonymous.__workletHash=744555119489;anonymous.__initData=_worklet_744555119489_init_data;anonymous.__stackDetails=_e;return anonymous;}();}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_15490975732628_init_data = {
  code: "function anonymous(){const{_worklet_744555119489_init_data,_worklet_2165106463703_init_data}=this.__closure;const bar=function(){const _e=[new global.Error(),-2,-27];const anonymous=function(){const foobar=function(){const _e=[new global.Error(),1,-27];const anonymous=function(){console.log('foobar');};anonymous.__closure={};anonymous.__workletHash=744555119489;anonymous.__initData=_worklet_744555119489_init_data;anonymous.__stackDetails=_e;return anonymous;}();};anonymous.__closure={_worklet_744555119489_init_data:_worklet_744555119489_init_data};anonymous.__workletHash=2165106463703;anonymous.__initData=_worklet_2165106463703_init_data;anonymous.__stackDetails=_e;return anonymous;}();bar();}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), -3, -27];
  var anonymous = function anonymous() {
    var bar = function () {
      var _e = [new global.Error(), -2, -27];
      var anonymous = function anonymous() {
        var foobar = function () {
          var _e = [new global.Error(), 1, -27];
          var anonymous = function anonymous() {
            console.log('foobar');
          };
          anonymous.__closure = {};
          anonymous.__workletHash = 744555119489;
          anonymous.__initData = _worklet_744555119489_init_data;
          anonymous.__stackDetails = _e;
          return anonymous;
        }();
      };
      anonymous.__closure = {
        _worklet_744555119489_init_data: _worklet_744555119489_init_data
      };
      anonymous.__workletHash = 2165106463703;
      anonymous.__initData = _worklet_2165106463703_init_data;
      anonymous.__stackDetails = _e;
      return anonymous;
    }();
    bar();
  };
  anonymous.__closure = {
    _worklet_744555119489_init_data: _worklet_744555119489_init_data,
    _worklet_2165106463703_init_data: _worklet_2165106463703_init_data
  };
  anonymous.__workletHash = 15490975732628;
  anonymous.__initData = _worklet_15490975732628_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}();"
`;

exports[`babel plugin for worklet nesting transpiles worklets with functions defined on UI thread to run them on JS 1`] = `
"var _worklet_4484193487608_init_data = {
  code: "function anonymous(){const{runOnJS}=this.__closure;const a=function(){'worklet';console.log('Good morning from JS thread!');};const b=function(){'worklet';console.log('Good afternoon from JS thread');};const func=Math.random()<0.5?a:b;runOnJS(func)();}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_2310082662475_init_data = {
  code: "function anonymous(){console.log('Good morning from JS thread!');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var _worklet_9108102051728_init_data = {
  code: "function anonymous(){console.log('Good afternoon from JS thread');}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
runOnUI(function () {
  var _e = [new global.Error(), -2, -27];
  var anonymous = function anonymous() {
    var a = function () {
      var _e = [new global.Error(), 1, -27];
      var anonymous = function anonymous() {
        console.log('Good morning from JS thread!');
      };
      anonymous.__closure = {};
      anonymous.__workletHash = 2310082662475;
      anonymous.__initData = _worklet_2310082662475_init_data;
      anonymous.__stackDetails = _e;
      return anonymous;
    }();
    var b = function () {
      var _e = [new global.Error(), 1, -27];
      var anonymous = function anonymous() {
        console.log('Good afternoon from JS thread');
      };
      anonymous.__closure = {};
      anonymous.__workletHash = 9108102051728;
      anonymous.__initData = _worklet_9108102051728_init_data;
      anonymous.__stackDetails = _e;
      return anonymous;
    }();
    var func = Math.random() < 0.5 ? a : b;
    runOnJS(func)();
  };
  anonymous.__closure = {
    runOnJS: runOnJS
  };
  anonymous.__workletHash = 4484193487608;
  anonymous.__initData = _worklet_4484193487608_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}())();"
`;

exports[`babel plugin generally removes comments from worklets 1`] = `
"var _worklet_235615426006_init_data = {
  code: "function anonymous(){return true;}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var f = function () {
  var _e = [new global.Error(), 1, -27];
  var anonymous = function anonymous() {
    return true;
  };
  anonymous.__closure = {};
  anonymous.__workletHash = 235615426006;
  anonymous.__initData = _worklet_235615426006_init_data;
  anonymous.__stackDetails = _e;
  return anonymous;
}();"
`;

exports[`babel plugin generally supports recursive calls 1`] = `
"var a = 1;
var _worklet_210900050506_init_data = {
  code: "function foo(t){const foo=this._recur;const{a}=this.__closure;if(t>0){return a+foo(t-1);}}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
var foo = function () {
  var _e = [new global.Error(), -2, -27];
  var foo = function foo(t) {
    if (t > 0) {
      return a + foo(t - 1);
    }
  };
  foo.__closure = {
    a: a
  };
  foo.__workletHash = 210900050506;
  foo.__initData = _worklet_210900050506_init_data;
  foo.__stackDetails = _e;
  return foo;
}();"
`;

exports[`babel plugin generally transforms 1`] = `
"var _reactNativeReanimated = _interopRequireWildcard(require("react-native-reanimated"));
function _getRequireWildcardCache(nodeInterop) { if (typeof WeakMap !== "function") return null; var cacheBabelInterop = new WeakMap(); var cacheNodeInterop = new WeakMap(); return (_getRequireWildcardCache = function _getRequireWildcardCache(nodeInterop) { return nodeInterop ? cacheNodeInterop : cacheBabelInterop; })(nodeInterop); }
function _interopRequireWildcard(obj, nodeInterop) { if (!nodeInterop && obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== "object" && typeof obj !== "function") { return { default: obj }; } var cache = _getRequireWildcardCache(nodeInterop); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (key !== "default" && Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }
var _worklet_13769858944821_init_data = {
  code: "function anonymous(){const{offset}=this.__closure;return{transform:[{translateX:offset.value*255}]};}",
  location: "/dev/null",
  sourceMap: "\\"mock source map\\"",
  version: "x.y.z"
};
function Box() {
  var offset = (0, _reactNativeReanimated.useSharedValue)(0);
  var animatedStyles = (0, _reactNativeReanimated.useAnimatedStyle)(function () {
    var _e = [new global.Error(), -2, -27];
    var anonymous = function anonymous() {
      return {
        transform: [{
          translateX: offset.value * 255
        }]
      };
    };
    anonymous.__closure = {
      offset: offset
    };
    anonymous.__workletHash = 13769858944821;
    anonymous.__initData = _worklet_13769858944821_init_data;
    anonymous.__stackDetails = _e;
    return anonymous;
  }());
  return React.createElement(React.Fragment, null, React.createElement(_reactNativeReanimated.default.View, {
    style: [styles.box, animatedStyles]
  }), React.createElement(Button, {
    onPress: function onPress() {
      return offset.value = Math.random();
    },
    title: "Move"
  }));
}"
`;
